[package]
name = "cat_gestion"
version = "0.1.0"
edition = "2021"


[dependencies]
env_logger = "0.11.3"
eframe = { version = "0.28.1", features = ["default", "__screenshot"] }
egui_extras = { version = "0.28.1", features = ["default","all_loaders"] }
image = { version = "0.25.2", features = ["jpeg", "png"] }
chrono = "0.4.38"
rand = "0.9.0-alpha.1"
egui-toast = "0.14.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
